# todomvc-023

./: .gitignore  .plan  README.md
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: api.rs  main.rs  state.rs
frontend/src/components/: footer.rs  header.rs  mod.rs  todo_item.rs  todo_list.rs
migrations/: 20240101000000_create_todos.sql
server/: Cargo.toml
server/src/: db.rs  main.rs  models.rs  routes.rs
server/tests/: api_tests.rs
